--- a/PriceListEditor1/Views/PriceLists/Delete.cshtml
+++ b/PriceListEditor1/Views/PriceLists/Delete.cshtml
@@ -8,16 +8,20 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PriceList</h4>
+    <h4>Price List</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Name)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
+        <dt class="col-sm-2">
+            Name
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Name
+        </dd>
     </dl>
 
-    <form asp-action="DeleteConfirmed">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
