--- a/PriceListEditor1/Views/Products/Delete.cshtml
+++ b/PriceListEditor1/Views/Products/Delete.cshtml
@@ -11,14 +11,23 @@
     <h4>Product</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.ProductName)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.ProductName)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.ProductCode)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.ProductCode)</dd>
+        <dt class="col-sm-2">
+            Name
+        </dt>
+        <dd class="col-sm-10">
+            @Model.ProductName
+        </dd>
+        <dt class="col-sm-2">
+            Code
+        </dt>
+        <dd class="col-sm-10">
+            @Model.ProductCode
+        </dd>
     </dl>
-    <form asp-action="DeleteConfirmed">
+
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Details" asp-controller="PriceLists" asp-route-id="@Model.PriceListId">Back to Price List</a>
+        <a asp-action="Details" asp-controller="PriceLists" asp-route-id="@Model.PriceListId" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
